src/objects/sandeep_child__c.object
<CustomObject>
    <fields>
        <fullName>Funding__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>sandeep child</relationshipLabel>
        <relationshipName>sandeep_child</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c1__c</fullName>
        <label>c1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>c2__c</fullName>
        <label>c2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>total__c</fullName>
        <label>total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>sandeep child</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>sandeep child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sandeep child</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>